--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="wrapper">
         <div class="intro-page page-section" id="1">
             <div id="hello">
-                <div>Hey,</div>
-                <div>I'm Philip Chan,</div>
-                <div>full-stack web developer.</div>
+                <div class="hello1">Hey,</div>
+                <div class="hello2">I'm Philip Chan,</div>
+                <div class="hello3">full-stack web developer.</div>
             </div>
             <div>
                 <a id="goto-href" href="#2">
@@ -126,7 +126,7 @@
                                 <div class="skills">
                                     <div>Languages & Frameworks</div>
                                     <ul>
-                                        <li>JavaScript, jQuery, Node, AJAX, Express, React, Redux</li>
+                                        <li>JavaScript, jQuery, Nodejs, AJAX, Express, React, Redux</li>
                                         <li>HTML5, CSS3, SASS, Bootstrap</li>
                                         <li>Ruby, Rails</li>
                                     </ul>
@@ -136,6 +136,7 @@
                                     <ul>
                                         <li>Git, Github</li>
                                         <li>MongoDB, PostgreSQL, Knex</li>
+                                        <li>Firebase</li>
                                     </ul>
                                 </div>
                                 <div class="skills">
