--- a/index.html
+++ b/index.html
@@ -161,10 +161,7 @@
                                                 <div class="location">Vancouver, BC</div>
                                                 <ul>
                                                     <li>Analyzed applications with Oracle
-                                                        - checked
-                                                        for required documents and admission requirements on which
-                                                        admission decisions
-                                                        would be made</li>
+                                                        - checked student documents against course requirements to make admission decisions</li>
                                                     <li>Answered emails and phone calls that were directed to the
                                                         admissions office
                                                         regarding the application process</li>
@@ -182,7 +179,7 @@
                                                     <li>Arranged personal customer service while representing a
                                                         multitude of
                                                         high-fashion brands</li>
-                                                    <li>Frequently achieved above target sale goal of $1000</li>
+                                                    <li>Frequently achieved above target sale goal of $2000</li>
                                                     <li>Performed sales support functions on POS systems and was able to
                                                         handle large
                                                         numbers of customers during massive sales</li>
