--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                             </a>
                                         </div>
                                         <div class="contact-block">
-                                            <a href="assets/Philip Chan - Resume.pdf" target="_blank">
+                                            <a href="assets/images/RESUME.pdf" target="_blank">
                                                 <i class="fas fa-file-alt"></i>
                                             </a>
                                         </div>
