--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                         <li><a id="tab1">Employment</a></li>
                                         <li><a id="tab2">Education</a></li>
                                     </ul>
-                                    <div class="tab-container" id="tab1C">
+                                    <div class="tab-container noscroll" id="tab1C">
                                         <div class="tab-content">
                                             <div class="slide-block">
                                                 <h5>Admissions Assistant</h5>
