other tab container fixed

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="tab-container" id="tab2C">
+                                    <div class="tab-container no scroll" id="tab2C">
                                         <div class="tab-content">
                                             <div class="slide-block">
                                                 <h5>Lighthouse Labs</h5>
